using System;
using System.Collections.Generic;
using System.Text;

namespace AppAC.Domain
{
    public class AccionPlaneada: Accion
    {
    }
}
