using System;
using System.Collections.Generic;
using System.Text;

namespace AppAC.Domain
{
    public class AccionRealizada:Accion
    {
        public Evidencia Evidencia { get; set; }
    }
}
