using System;
using System.Collections.Generic;
using System.Text;

namespace AppAC.Domain
{
    public class Evidencia
    {
        public string Ruta { get; set; }
        public DateTime FechaCarga { get; set; }
    }
}
